<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tool="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:padding="8dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="8dp"
                                        android:padding="8dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_margin="8dp">

            <TextView
                    android:textSize="22sp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/person_data_fragment_label_general_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <!-- Enrol Person Results -->

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:textColor="@color/design_default_color_primary_dark"
                      android:text="@string/person_data_fragment_label_enrol_person_process"/>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/darker_gray"/>

            <TableLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:stretchColumns="1"
                         android:paddingBottom="8dp">

                <TableRow>
                    <TextView
                            android:textColor="@android:color/holo_purple"
                            android:text="@string/label_duration"/>

                    <TextView
                            android:id="@+id/text_view_enrol_duration"
                            android:gravity="end"
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            tool:text="35ms"/>
                </TableRow>

                <TableRow>
                    <TextView
                              android:textColor="@android:color/holo_purple"
                              android:text="@string/label_error_code"/>

                    <TextView android:id="@+id/text_view_enrol_error_code"
                              android:gravity="end"
                              android:layout_width="wrap_content"
                              android:maxLines="5"
                              android:layout_weight="0.5"
                              tool:text="SUCCESS"/>
                </TableRow>

                <TableRow android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                    <TextView android:textColor="@android:color/holo_purple"
                              android:layout_width="wrap_content"
                              android:text="@string/label_message"/>

                    <TextView android:id="@+id/text_view_enrol_message"
                              android:gravity="end"
                              android:maxLines="10"
                              android:layout_weight="0.5"
                              tool:text="User enrolled successfully in MBSS. This is an example of multiline"/>
                </TableRow>
            </TableLayout>

            <!-- Encode Person Results -->

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:textColor="@color/design_default_color_primary_dark"
                      android:text="@string/person_data_fragment_label_encode_person_process"/>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/darker_gray"/>

            <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:stretchColumns="1">
                <TableRow>
                    <TextView android:textColor="@android:color/holo_purple"
                              android:text="@string/label_duration"/>

                    <TextView android:id="@+id/text_view_encode_duration"
                              android:gravity="end"
                              android:layout_weight="0.5"
                              tool:text="10ms"/>
                </TableRow>

                <TableRow>
                    <TextView android:textColor="@android:color/holo_purple"
                              android:text="@string/label_error_code"/>

                    <TextView android:id="@+id/text_view_encode_error_code"
                              android:gravity="end"
                              android:layout_weight="0.5"
                              tool:text="SUCCESS"/>
                </TableRow>

                <TableRow>
                    <TextView android:textColor="@android:color/holo_purple"
                              android:text="@string/label_message"/>

                    <TextView android:id="@+id/text_view_encode_message"
                              android:gravity="end"
                              android:layout_weight="0.5"
                              android:layout_width="wrap_content"
                              tool:text="User enrolled successfully in MBSS. Example message for multiline"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>