<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:padding="16dp"
              tools:context=".scenes.user_info.view.fragments.UserInfoDataFragment"
              android:orientation="vertical">

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="8dp"
                                        app:cardElevation="4dp"
                                        app:cardCornerRadius="4dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="8dp"
                      android:orientation="vertical" android:padding="8dp">

            <TextView android:text="@string/label_username"
                      android:textColor="@color/colorPrimary"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_marginTop="8dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/text_view_username"
                      tools:text="_MyUsername_"
                      android:textSize="18sp"
                      android:textStyle="normal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:text="@string/label_name"
                      android:textColor="@color/colorPrimary"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_marginTop="8dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/text_view_name"
                      tools:text="John"
                      android:textSize="18sp"
                      android:textStyle="normal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:text="@string/label_last_name"
                      android:textColor="@color/colorPrimary"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_marginTop="8dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/text_view_last_name"
                      tools:text="Doe"
                      android:textSize="18sp"
                      android:textStyle="normal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:text="@string/label_m_last_name"
                      android:textColor="@color/colorPrimary"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_marginTop="8dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/text_view_m_last_name"
                      tools:text="Doe"
                      android:textSize="18sp"
                      android:textStyle="normal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>