<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".scenes.license.LicenseActivity">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
                  app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:text="@string/license_details_label_license_details"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:padding="8dp">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="8dp"
                          android:orientation="vertical">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:weightSum="1"
                              android:orientation="horizontal">

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="0.5"
                              android:textStyle="bold"
                              android:text="@string/license_details_label_license_id"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:id="@+id/tv_license_id"
                              android:layout_weight="0.5"
                              tools:text="LicenseIDabcde123456"/>

                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:weightSum="1"
                              android:orientation="horizontal">

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="0.5"
                              android:textStyle="bold"
                              android:text="@string/license_details_label_profile_id"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:id="@+id/tv_profile_id"
                              android:layout_weight="0.5" tools:text="APP_DEMO"/>

                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:weightSum="1"
                              android:orientation="horizontal">

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="0.5"
                              android:textStyle="bold"
                              android:text="@string/license_details_label_status"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:id="@+id/tv_status"
                              android:layout_weight="0.5" tools:text="LICENSE_ACTIVATED"/>

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:textColor="@android:color/white"
                  android:layout_marginTop="16dp"
                  android:textStyle="bold"
                  android:text="@string/license_details_label_features"/>

        <ListView android:id="@+id/lv_features"
                  android:background="@android:color/white"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>