<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".scenes.face_info.FaceInfoActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="8dp"
                  android:id="@+id/linearLayout"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintStart_toStartOf="parent">

        <TextView android:text="@string/label_face_capture"
                  android:textColor="@android:color/white"
                  android:textSize="30sp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingBottom="8dp"
                  app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

        <TextView android:textSize="14sp"
                  android:text="@string/label_face_capture_brief"
                  android:textColor="@android:color/white"
                  android:textAlignment="textStart"
                  android:paddingBottom="8dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <Switch android:id="@+id/switch_dont_show_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:paddingBottom="8dp"
                android:gravity="end"
                android:textStyle="bold"
                android:text="@string/label_dont_show_again"/>

    </LinearLayout>

    <android.support.design.button.MaterialButton
            android:id="@+id/button_start_process"
            android:text="@string/label_start_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>

